<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_height="@dimen/contact_entry_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/contact_entry_image_height"
            android:padding="10dp"
            android:src="@drawable/qq_contact_list_discussion_entry_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/contact_discussion_str"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_height="@dimen/contact_entry_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/contact_entry_image_height"
            android:padding="10dp"
            android:src="@drawable/qq_contact_list_phone_entry_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/contact_phone_str"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_height="@dimen/contact_entry_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/contact_entry_image_height"
            android:padding="10dp"
            android:src="@drawable/qq_contact_list_troop_entry_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/contact_troop_str"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_height="@dimen/contact_entry_height">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/contact_entry_image_height"
            android:padding="10dp"
            android:src="@drawable/qq_contact_list_pbaccount_entry_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/contact_pbaccount_str"/>
    </LinearLayout>
</LinearLayout>